# FM_Templates_B

./: .gitignore  Makefile.am  configure.ac  demo.bip  demo2.bip  demo3.bip  demo4.bip  demo4_new_syntax.bip  genom3-bip-pocolibs.pc.in  genom3-bip-ros.pc.in  robloco.bip  roblocort.bip  roblocotest.bip
autoconf/: ax_pthread.m4
common-pocolibs/: msglib.h  serialize.h  typecopy.h  typeutil.tcl
common-ros/: action.h  genrosmsg.tcl  msgmd5.in  portlib.h  ros.manifest.xml  serialize.h  service.h  typecopy.h
common-ros/autoconf/: ax_boost_thread.m4
model/: model_execution.tcl  model_verification.tcl  model_verification_urgencies.tcl  template.tcl
server-pocolibs/: BIPExternalPort_felix.bip  BIPGenoM3.bip  BIPGenoM3.cpp  BIPGenoM3.hpp  TODO  activity.c  activity.h  codels.mappings.h  control_codels.c  control_task.c  control_task.h  exception.c  exec_codels.c  exec_task.c  genom3_external_for_bip.h  main.c  main.cpp  metadata.c  metadata.gen  msglib.c  parameters.h  pocolibs.Makefile.am  pocolibs.configure.ac  pocolibs.pc.in  portlib.c  portlib.h  remotelib.c  remotelib.h  template.tcl
server-ros/: BIPGenoM3.bip  BIPGenoM3.cpp  BIPGenoM3.hpp  TODO  activities.cc  activities.h  codels.mappings.h  control-codels.cc  control-task.cc  exception.cc  exec-task.cc  genom3_external_for_bip.h  internals.h  json.cc  locals.h  main.cc  port.cc  port.h  remote.cc  remote.h  ros.Makefile.am  ros.configure.ac  template.tcl
